--- a/omc-gateway-810x/src/main/resources/application.yml
+++ b/omc-gateway-810x/src/main/resources/application.yml
@@ -4,9 +4,6 @@ spring:
 
   cloud:
     nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-        namespace: 4f4bab40-8cb4-44b4-bbc1-c759e35d3291
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
@@ -14,5 +11,8 @@ spring:
         namespace: 4f4bab40-8cb4-44b4-bbc1-c759e35d3291
         group: DEFAULT_GROUP
         prefix: omc-gateway-810x
+
   config:
-    import: nacos:${spring.cloud.nacos.config.prefix}
+    import:
+      - nacos:${spring.cloud.nacos.config.prefix}
+      - nacos:common-config
