--- a/omc-common/pom.xml
+++ b/omc-common/pom.xml
@@ -138,5 +138,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-slf4j</artifactId>
+            <version>13.6</version>
+        </dependency>
     </dependencies>
+
 </project>
