--- a/omc-order-840x/src/main/resources/application.yml
+++ b/omc-order-840x/src/main/resources/application.yml
@@ -10,7 +10,20 @@ spring:
         refresh-enabled: true
         namespace: 4f4bab40-8cb4-44b4-bbc1-c759e35d3291
         group: DEFAULT_GROUP
-
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: 4f4bab40-8cb4-44b4-bbc1-c759e35d3291
+    loadbalancer:
+      enabled: true
   config:
     import:
       - nacos:common-config
+
+dubbo:
+  application:
+    name: omc-order-840x
+  registry:
+    address: nacos://127.0.0.1:8848
+  consumer:
+    check: false
+    loadbalance: "random"
