--- a/omc-user-820x/src/main/resources/application.yml
+++ b/omc-user-820x/src/main/resources/application.yml
@@ -11,7 +11,11 @@ spring:
         namespace: 4f4bab40-8cb4-44b4-bbc1-c759e35d3291
         group: DEFAULT_GROUP
         prefix: omc-user-820x
-
+      discovery:
+        server-addr: 127.0.0.1:8848
+        namespace: 4f4bab40-8cb4-44b4-bbc1-c759e35d3291
+    loadbalancer:
+      enabled: true
   config:
     import:
       - nacos:${spring.cloud.nacos.config.prefix}
