--- a/omc-goods-830x/pom.xml
+++ b/omc-goods-830x/pom.xml
@@ -43,6 +43,10 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
             <groupId>us.sushome.onlinemall-cloud</groupId>
             <artifactId>omc-common</artifactId>
             <version>1.0.0</version>
